# WareHouse-Surveillance-Robot

./: README.md
install/: local_setup.sh  setup.sh
install/warehouse_robot_description/lib/warehouse_robot_description/: teleop_pick_place
install/warehouse_robot_description/share/warehouse_robot_description/: package.ps1  package.sh
src/warehouse_robot_description/: CMakeLists.txt  README.md
src/warehouse_robot_description/config/: ros_gz_bridge.yaml  slam_params.yaml
src/warehouse_robot_description/launch/: display.launch.py  gazebo.launch.py
src/warehouse_robot_description/meshes/base/: base_gazebo.stl
src/warehouse_robot_description/rviz/: display.rviz  slam.rviz
src/warehouse_robot_description/scripts/: odom_to_path.py
src/warehouse_robot_description/urdf/: warehouse_robot.urdf.xacro
src/warehouse_robot_description/worlds/: warehouse_factory.sdf
